# 1.00.04 (51951) May 16, 2011
5/16/11 fix: #2850, with battery disconnected, user is controlling charge and capacitance, so compute plate voltages when charge or capacitance changes
5/11/11 fix: add missing notification in circuit.setBatteryConnected
5/11/11 fix use of addObserver(ChangeObserver) in Capacitor, add explicit initialization because there's no callback on registration
5/11/11 #2843, make E-Field Detector zoom buttons behave like bar meter zoom buttons (enabled only if relevant, immediately zoom to optimum scale)
5/5/11 enable Multiple Capacitors tab
# 1.00.03 (51551) May 5, 2011
5/5/11 demonstrate additional zoom changes
5/4/11 temporarily hide Multiple Capacitors tab
5/4/11 simplified the implementation of EFieldDetectorBodyNode.updateVisibility
5/4/11 #2843, fix reset of E-field detector zoom
5/4/11 move some global properties from model to view (dielectric charge view type, plate charge visibility, E-field visibility)
5/4/11 #2843, fix reset of bar meter zoom (move max exponent for bar meters to model, to facilitate resetting)
5/4/11 #2843, change request: put zoom in button above zoom out button in bar meters and E-field detector
5/4/11 #2843, change request: set default max of Capacitance meter to 10^-12
5/4/11 add interviews to credits.txt
5/4/11 enable Multiple Capacitors tab
# 1.00.02 (51504) May 3, 2011
5/3/11 demonstrate new zoom buttons for bar meters
5/3/11 temporarily hide Multiple Capacitors tab
5/3/11 #2843, change to 2 zoom buttons (in and out) on bar meter
5/2/11 #2843, make zoom button on bar meter look like a button
4/27/11 add ICircuit.reset, reset all circuits in model.reset
4/27/11 move convenience classes to inner classes
4/27/11 give better names to combination circuits, at least for development
4/27/11 change World to "WorldBounds extends Property"
4/27/11 convert to using global properties for things controlled from the menu bar
4/27/11 big simplification of VoltmeterProbeNode hierarchy